--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,62 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Wetube - Video Sharing Platform</title>
+
+  <!--- INFORMATION -->
+  <meta name="revised" content="14/08/2023" />
+  <meta name="description"
+    content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta name="keywords" content="Wetube, Video, Platform, Media, Muslim, Bangladesh" />
+  <meta name="author" content="Mohammad Sefatullah" />
+
+  <!-- THEME -->
+  <meta name="color-scheme" content="dark" />
+  <meta name="theme-color" content="#0f0f0f" />
+  <meta name="msapplication-navbutton-color" content="#0f0f0f" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#0f0f0f" />
+
+  <!-- ICON -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="img/vnd.microsoft.icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Wetube</title>
+
+  <!--[if lt IE 9]>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <![endif]-->
+
+  <!-- FB PREVIEW -->
+  <meta property="og:site_name" content="Wetube" />
+  <meta property="og:type" content="Video-sharing Platform" />
+  <meta property="og:title" content="Wetube - Video Sharing Platform" />
+  <meta property="og:description" content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png" />
+  <meta property="og:url" content="%PUBLIC_URL%" />
+
+  <!-- TWITTER PREVIEW -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Wetube - Video Sharing Platform" />
+  <meta name="twitter:description" content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/favicon-32x32.png" />
+  <meta name="twitter:site" content="@wetube" />
+  <meta name="twitter:creator" content="@mosefatullah" />
+
+  <!-- SCRIPTS -->
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
-    (function(l) {
-      if (l.search[1] === '/' ) {
-        var decoded = l.search.slice(1).split('&').map(function(s) { 
+    (function (l) {
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
           return s.replace(/~and~/g, '&')
         }).join('?');
         window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
+          l.pathname.slice(0, -1) + decoded + l.hash
         );
       }
     }(window.location))
