--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Wetube - Video Sharing Platform</title>
+  <title>WeTube - Video Sharing Platform</title>
 
   <!--- INFORMATION -->
   <meta name="revised" content="14/08/2023" />
   <meta name="description"
-    content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
-  <meta name="keywords" content="Wetube, Video, Platform, Media, Muslim, Bangladesh" />
+    content="WeTube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta name="keywords" content="WeTube, Video, Platform, Media, Muslim, Bangladesh" />
   <meta name="author" content="Mohammad Sefatullah" />
 
   <!-- THEME -->
@@ -33,19 +33,21 @@
   <![endif]-->
 
   <!-- FB PREVIEW -->
-  <meta property="og:site_name" content="Wetube" />
+  <meta property="og:site_name" content="WeTube" />
   <meta property="og:type" content="Video-sharing Platform" />
-  <meta property="og:title" content="Wetube - Video Sharing Platform" />
-  <meta property="og:description" content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta property="og:title" content="WeTube - Video Sharing Platform" />
+  <meta property="og:description"
+    content="WeTube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
   <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png" />
   <meta property="og:url" content="%PUBLIC_URL%" />
 
   <!-- TWITTER PREVIEW -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Wetube - Video Sharing Platform" />
-  <meta name="twitter:description" content="Wetube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
+  <meta name="twitter:title" content="WeTube - Video Sharing Platform" />
+  <meta name="twitter:description"
+    content="WeTube is a Bangladeshi video sharing platform and Muslim social media application made by Mohammad Sefatullah." />
   <meta name="twitter:image" content="%PUBLIC_URL%/favicon-32x32.png" />
-  <meta name="twitter:site" content="@wetube" />
+  <meta name="twitter:site" content="@WeTube" />
   <meta name="twitter:creator" content="@mosefatullah" />
 
   <!-- SCRIPTS -->
