--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
 
   <!-- THEME -->
   <meta name="color-scheme" content="dark" />
-  <meta name="theme-color" content="#0f0f0f" />
-  <meta name="msapplication-navbutton-color" content="#0f0f0f" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#0f0f0f" />
+  <meta name="theme-color" content="#0e1e25" />
+  <meta name="msapplication-navbutton-color" content="#0e1e25" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#0e1e25" />
 
   <!-- ICON -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
